...
            )
        }
    }
}

private const val DEMO_INSURANCE_ENTITY_ID = "de.servicehealth.poppmodule.demo.insurance"
private val demoInsurance = FederationIdp(entityId = DEMO_INSURANCE_ENTITY_ID, name = "POPP Demo Krankenkasse")

private val previewInsurances =
    listOf(
        FederationIdp(entityId = "1", name = "Gematiker", logoUri = "https://example.com/logo.png"),
        FederationIdp(entityId = "2", name = "Service-Health Demo KK", logoUri = "https://example.com/logo.png"),
        FederationIdp(entityId = "3", name = "ABC", logoUri = "https://example.com/logo.png"),
...
